--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "id": "com.protrack.production.manager",
   "name": "ProTrack Production Management",
@@ -10,8 +9,10 @@
   "background_color": "#f8fafc",
   "display": "standalone",
   "orientation": "portrait",
-  "start_url": "./index.html",
-  "scope": "./",
+
+  "start_url": "/Teddy-Bear-Calculator/",
+  "scope": "/Teddy-Bear-Calculator/",
+
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2649/2649231.png",
